--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/values/strings.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/values/strings.xml
@@ -16,6 +16,11 @@
     <string name="incorrect_toast">Odpowiedź błędna!</string>
 
     <string name="odpowiedzi_toast">Udzieliłeś %1$d poprawnych odpowiedzi.</string>
+    <string name="answered">Odpowiedź na to pytanie została podana.</string>
 
+    <string name="button_show_label">Show</string>
+    <string name="warning_text_view_label">Czy na pewno chcesz to zrobic</string>
+    <string name="cheat_button_label">Cheat</string>
+    <string name="message_for_cheaters">Wiem ze chcesz zobaczyc odpowiedz</string>
 
 </resources>
