--- a/GeoQuizL1/GeoQuizL1/app/src/main/res/values/strings.xml
+++ b/GeoQuizL1/GeoQuizL1/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="question_stolica_dolnego_slaska">Czy Świdnica jest stolicą Dolnego Śląska?</string>
     <string name="question_wisla">Czy Wisła jest najdłuższą rzeką  Polski?</string>
     <string name="question_sniezka">Czy Śnieżka to najwyższy szczyt  Karkonoszy?</string>
+    <string name="question_polska">Czy Polska leży w Ameryce Północnej?</string>
 
 
     <string name="true_button">Prawda</string>
